--- a/Index.css
+++ b/Index.css
@@ -37,14 +37,14 @@ body {
 }
 
 .header__logo /*Medidas del logo*/ {
-  height: 10px;
-  width: 10px;
-  margin: 10px;
+  height: 200px;
+  width: 200px;
+  margin: 50px;
 }
 
 .header__titulo /*Tipografia del titulo*/ {
   color: #132c33;
-  font-size: 1.7rem;
+  font-size: 2rem;
 }
 
 .header__navegacion /*Caracteristicas y flex del nav*/ {
@@ -88,6 +88,13 @@ a:hover {
   color: #d8e3e7;
 }
 
+/*Media Queries*/
+
+@media (min-width: 768px) {
+  .header__navegacion {
+    display: flex;
+  }
+}
 /* Fin Header */
 
 /* Main */
