Modifiqué el menú de todas las páginas, quedando así 100% responsive

--- a/Contacto.css
+++ b/Contacto.css
@@ -35,15 +35,12 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  animation-name: animation-header;
-  animation-duration: 3s;
-  animation-iteration-count: inherit;
 }
 
-.header__logo {
+.logo {
   height: 50px;
   width: 50px;
-  margin-left: 10px;
+  margin: 10px;
 }
 
 .header__navegacion {
@@ -62,8 +59,6 @@ body {
 
 li a {
   color: #13a3ca;
-  border: 2px solid #d8e3e7;
-  padding: 5px 30px;
   text-decoration: none;
   transition: background 3s;
 }
