--- a/Profesionales.css
+++ b/Profesionales.css
@@ -28,41 +28,13 @@ body {
   );
 }
 
-.header {
-  /*caracteristicas del header*/
-  height: 65px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  animation-name: animation-header;
-  animation-duration: 3s;
-  animation-iteration-count: inherit;
-}
-
-.header__logo {
+.logo {
   height: 50px;
   width: 50px;
-  margin-left: 10px;
+  margin: 10px;
 }
-
-.header__navegacion {
-  margin-right: 10px;
-}
-
-.header__navegacion--lista {
-  font-weight: bolder;
-  font-size: 1rem;
-  list-style-type: none;
-  display: flex;
-  gap: 10px;
-}
-
 li a {
   color: #13a3ca;
-  border: 2px solid #d8e3e7;
-  padding: 5px 30px;
   text-decoration: none;
   transition: background 3s;
 }
@@ -96,86 +68,6 @@ li a:hover /*Cambio de color y fondo pasas con el mouse*/ {
   color: #d8e3e7;
 }
 /* Profesionales */
-
-.profesionales /*grilla de todos los profesionales*/ {
-  display: grid;
-  grid-template-rows: 10% 40% 10% 40%;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 10px;
-  row-gap: 10px;
-  justify-items: stretch;
-  align-items: center;
-}
-
-.adriana /*Nombre del primer profesional*/ {
-  background-color: #51c4d3;
-  grid-column: 1 / 3;
-  grid-row: 1/2;
-  text-align: center;
-}
-.imagenadriana /*Imagen del primer profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 1/ 2;
-  grid-row: 2/3;
-  justify-self: center;
-}
-.textoadriana /*Descripcion del primer profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 2/3;
-  grid-row: 2/3;
-  text-align: left;
-}
-.rocio /*Nombre del segundo profesional*/ {
-  background-color: #51c4d3;
-  grid-column: 3/5;
-  grid-row: 1/2;
-  text-align: center;
-}
-.imagenrocio /*Imagen del segundo profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 3/4;
-  grid-row: 2/3;
-  justify-self: center;
-}
-.textorocio /*Descripcion del segundo profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 4/5;
-  grid-row: 2/3;
-}
-.dina /*Nombre del tercer profesional*/ {
-  background-color: #51c4d3;
-  grid-column: 1 / 3;
-  grid-row: 3/4;
-  text-align: center;
-}
-.imagendina /*imagen del tercer profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 1/2;
-  grid-row: 4/5;
-  justify-self: center;
-}
-.textodina /*Descripcion del tercer profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 2/3;
-  grid-row: 4/5;
-}
-.carolina /*Nombre del cuarto profesional*/ {
-  background-color: #51c4d3;
-  grid-column: 3/5;
-  grid-row: 3/4;
-  text-align: center;
-}
-.imagencarolina /*imagen del cuarto profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 3/4;
-  grid-row: 4/5;
-  justify-self: center;
-}
-.textocarolina /*Descripcion del cuarto profesional*/ {
-  background-color: #d8e3e7;
-  grid-column: 4/5;
-  grid-row: 4/5;
-}
 
 h3 {
   font-size: 1.6rem;
