--- a/styles/pages/_valores.scss
+++ b/styles/pages/_valores.scss
@@ -44,14 +44,13 @@ li a:hover /*Cambio de color y fondo pasas con el mouse*/ {
   color: $color-fondo-general;
 }
 .container {
-  margin: 30px;
+}
 
-  &__subtitulo {
-    font-size: $letra * 5;
-    color: $color-secundario;
-    margin-top: 40px;
-    margin-bottom: 30px;
-  }
+.subtitulo {
+  font-size: $letra * 5;
+  color: $color-secundario;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 
 .volver {
