--- a/styles/pages/_tratamientos.scss
+++ b/styles/pages/_tratamientos.scss
@@ -13,6 +13,7 @@
   height: 50px;
   width: 50px;
   margin: 10px;
+  border-radius: 30%;
 }
 
 li a {
@@ -35,7 +36,7 @@ li a:hover /*Cambio de color y fondo pasas con el mouse*/ {
 
 /* Main*/
 
-.titulo {
+.contenedor_titulo {
   background: rgb(49, 73, 79);
   background: linear-gradient(
     127deg,
@@ -44,11 +45,17 @@ li a:hover /*Cambio de color y fondo pasas con el mouse*/ {
     rgba(19, 44, 51, 1) 100%
   );
   margin-top: 30px;
-  padding: 5px;
-  font-size: 1.5rem;
-  text-align: center;
   color: #d8e3e7;
 }
+
+.titulo {
+  padding: 10px;
+  font-size: 2rem;
+  font-weight: bolder;
+  text-align: center;
+  justify-content: center;
+}
+
 /* Tabla de tratamientos*/
 
 .posicion-table {
