--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,111 +1,87 @@
 /* Header */
 
 .background /*fondo gradiente del header*/ {
-  background: rgb(49, 73, 79);
-  background: linear-gradient(
-    127deg,
-    rgba(49, 73, 79, 1) 0%,
-    rgba(27, 57, 65, 1) 55%,
-    rgba(19, 44, 51, 1) 100%
-  );
+  background: $color-fondo-titulo;
 }
 
 .logo {
-  height: 50px;
-  width: 50px;
-  margin: 10px;
-  border-radius: 30%;
+  height: $imagen;
+  width: $imagen;
+  margin: $margen;
+  border-radius: $curvado-suave;
 }
 
 li a {
-  font-weight: 600;
-  color: #13a3ca;
+  font-weight: $negrita-fuerte;
+  color: $color-secundario;
   text-decoration: none;
   transition: background 3s;
 }
 
 li a:hover /*Cambio de color y fondo pasas con el mouse*/ {
   transition: all 1s;
-  background-color: #51c4d3;
-  color: #132c33;
+  background-color: $color-terciario;
+  color: $color-principal;
 }
 .active {
-  background-color: #13a3ca;
-  color: #d8e3e7;
+  background-color: $color-secundario;
+  color: $color-fondo-general;
 }
 
 /* Fin Header */
 
 /* Main */
 .contenedor_titulo {
-  background: rgb(49, 73, 79);
-  background: linear-gradient(
-    127deg,
-    rgba(49, 73, 79, 1) 0%,
-    rgba(27, 57, 65, 1) 55%,
-    rgba(19, 44, 51, 1) 100%
-  );
-  margin-top: 30px;
-  margin-bottom: 30px;
-  color: #d8e3e7;
+  background: $color-fondo-titulo;
+  margin-top: $margen * 3;
+  margin-bottom: $margen * 3;
+  color: $color-fondo-general;
 }
 
 .titulo {
-  padding: 10px;
-  font-size: 2rem;
+  padding: $margen;
+  font-size: $titulo;
   font-weight: bolder;
   text-align: center;
   justify-content: center;
 }
-main h2 /* Titulo de cada historia*/ {
-  text-align: center;
-  color: #132c33;
-  font-size: 30px;
-}
-
-.imagenes /*Conjunto de Imagenes*/ {
-  margin: 60px;
-}
 
 .imagen {
-  height: 600px;
+  height: $imagen * 12;
 }
 
 @media screen and (max-width: 426px) {
   .imagen {
-    height: 250px;
+    height: $imagen * 5;
   }
 }
 
 @media screen and (max-width: 768px) {
   .imagen {
-    height: 400px;
+    height: $imagen * 8;
   }
-}
-
-.background_celeste {
-  background-color: #51c4d3;
-  text-align: center;
 }
 
 /* Textos de historia*/
 
 .historia /*contenedor general de historias*/ {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 30px;
+  padding-left: $margen * 2;
+  padding-right: $margen * 2;
+  padding-bottom: $margen * 3;
 }
 
-.paddinghistoria /*Bordes generales de cada titulo*/ {
-  padding-bottom: 20px;
-  padding-top: 20px;
-  font-size: 1.8rem;
+.titulo_historia /*Bordes generales de cada titulo*/ {
+  padding-bottom: $margen * 2;
+  padding-top: $margen * 2;
+  text-align: center;
+  color: $color-principal;
+  font-size: $letra * 6;
   font-weight: bolder;
 }
 
-.textohistoria /*Texto justificado*/ {
+.texto_historia /*Texto justificado*/ {
   text-align: justify;
-  font-weight: 400;
+  font-weight: $negrita-suave;
 }
 
 .textos {
@@ -122,7 +98,7 @@ main h2 /* Titulo de cada historia*/ {
 footer {
   background-image: url(https://gaci.com.ar/wp-content/uploads/2020/04/FONDO-CELESTE.jpg);
   background-position: top center;
-  padding: 30px;
+  padding: $margen * 3;
 }
 
 .info /* Contenedor del footer*/ {
@@ -130,28 +106,28 @@ footer {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding: 30px;
+  padding: $margen * 3;
 }
 
-footer h2 /* Titulo del footer*/ {
+footer h3 /* Titulo del footer*/ {
   text-align: center;
-  color: #132c33;
-  font-size: 2rem;
+  color: $color-principal;
+  font-size: $letra * 6;
   font-weight: bold;
 }
 .info h4 /*Titulos del footer*/ {
-  font-size: 1.8rem;
+  font-size: $letra * 5;
   font-weight: bold;
   text-align: center;
-  color: #132c33;
-  padding-bottom: 15px;
+  color: $color-principal;
+  padding-top: $margen * 1.5;
 }
 
 .info p /*Textos del footer*/ {
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: $letra * 3;
+  font-weight: $negrita-fuerte;
   text-align: center;
-  color: #132c33;
+  color: $color-principal;
 }
 
 /* Fin Footer */
